[FIX] account_reports: Journal Report: avoid the report becoming too large when unfolding lines
When unfolding the journals, a lot of empty, unused space was left around the values. This lead to the report easily becoming too large for the screen, causing the display of an horizontal scrollbar, and hence degrading the user experience. We fix that by removing any notion of minimal width for this report specifically.

closes odoo/enterprise#62718

--- a/account_reports/static/src/components/journal_report/journal_report.scss
+++ b/account_reports/static/src/components/journal_report/journal_report.scss
@@ -11,6 +11,10 @@
     .sheet { min-width: 1140px }
     .line_level_0 { background-color: inherit }
 
+    .table {
+        min-width: 0;
+    }
+
     .table > tbody > tr {
         &.accent_header { background-color: $o-gray-200 }
         &.accent_line {
